--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                         </form>
                                     </li>
                                     <li class="land-link">
-                                        <a href="#features">Documentation</a>
+                                        <a href="https://qx-docs.netlify.app/" target="blank">Documentation</a>
                                     </li>
                                     <li class="land-link">
                                         <a href="https://themeforest.net/user/qodex#contact">Contact</a>
@@ -82,7 +82,7 @@
                             </div>
                         </nav>
                         <div class="purchase-now-bottom">
-                            <a href="https://themeforest.net/user/qodex/portfolio" class="btn btn-style1" target="blank">Purchase Hublet</a>
+                            <a href="https://themeforest.net/user/qodex/portfolio" class="btn btn-style1" target="blank">Purchase Cyzle</a>
                         </div>
                     </div>
                 </div>
